ready for upload

--- a/fe-src/index.html
+++ b/fe-src/index.html
@@ -17,6 +17,8 @@
   <body>
     <my-header></my-header>
     <div class="container"></div>
+    <pre-loader></pre-loader>
+    <msg-comp></msg-comp>
     <script type="module" src="./index.ts"></script>
   </body>
 </html>
